--- a/index.html
+++ b/index.html
@@ -5,20 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link href="/style.css" rel="stylesheet">
 </head>
 <body>
     <!--Navigation and top section-->
     <div class="header">
         <div class="logo">Header Logo</div>
         <div class="nav-links">
-
+            <ul>
+                <li class="nav"><a href="">header link one</a></li>
+                <li class="nav"><a href="">header link two</a></li>
+                <li class="nav"><a href="">header link three</a></li>
+            </ul>
         </div>
         <div class="intro">
             <div clas="hero-section">
-
+                <h1 class="hero-header">This website is awesome</h1>
+                <p class="hero-subheader">This website has some subtext that goes here.</p>
+                <button class="signup hero-signup">Sign up</button>
             </div>
             <div class="intro-image">
-
+                <img src="" alt="place holder image">
             </div>
         </div>
     </div>
@@ -26,19 +33,41 @@
     <!--Main content of page-->
     <div class="content">
         <div class="main-section">
-
+            <h2>Some random information.</h2>
+            <div class="image-list">
+                <div class="img-main">
+                    <img src="" alt="image 1">
+                    <p class="info">some subtext under an image</p>
+                </div>
+                <div class="img-main">
+                    <img src="" alt="image 2">
+                    <p class="info">some subtext under an image</p>
+                </div>
+                <div class="img-main">
+                    <img src="" alt="image 3">
+                    <p class="info">some subtext under an image</p>
+                </div>
+                <div class="img-main">
+                    <img src="" alt="image 4">
+                    <p class="info">some subtext under an image</p>
+                </div>
+            </div>
         </div>
         <div class="quote-section">
-
+            <p class="quote">This is an inspiring quote, or testimonial from a customer.</p>
+            <p class="author">-Albert Einstein</p>
         </div>
         <div class="signup-section">
-
+            <div class="call">
+                <h3>Call to action! It's time!</h3>
+                <p>Sign up for our product by clicking that button right over there!</p>
+                <button class="signup call-signup">Sign up</button>
+            </div>
         </div>
     </div>
-
     <!--Footer-->
     <div class="footer">
-
+        <p class="copyright">Copyright c The Odin Project 2022</p>
     </div>
 </body>
 </html>
