--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     
     <!--Main content of page-->
     <div class="content">
-        <div class="main-section">
-            <h2>Some random information.</h2>
+        <div class="info-section">
+            <h2 class="info-heading">Some random information.</h2>
             <div class="image-list">
                 <div class="img-main">
                     <img src="" alt="image 1">
@@ -54,20 +54,18 @@
             </div>
         </div>
         <div class="quote-section">
-            <p class="quote">This is an inspiring quote, or testimonial from a customer.</p>
+            <p class="quote-text">This is an inspiring quote, or testimonial from a customer.</p>
             <p class="author">-Albert Einstein</p>
         </div>
-        <div class="signup-section">
-            <div class="call">
-                <h3>Call to action! It's time!</h3>
-                <p>Sign up for our product by clicking that button right over there!</p>
-                <button class="signup call-signup">Sign up</button>
-            </div>
+        <div class="call-section">
+            <h3>Call to action! It's time!</h3>
+            <p>Sign up for our product by clicking that button right over there!</p>
+            <button class="signup call-signup">Sign up</button>
         </div>
     </div>
     <!--Footer-->
     <div class="footer">
-        <p class="copyright">Copyright c The Odin Project 2022</p>
+        <p class="copyright">Copyright &copy; The Odin Project 2022</p>
     </div>
 </body>
 </html>
