--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div>
                 <figure>
                     <img class="intro-image" src="./chick.jpg" alt="A Chickadee sitting on a branch">
-                    <figcaption>Photo by Peter Lewis on Unsplash.</figcaption>
+                    <figcaption class="attribution">Photo by Peter Lewis on Unsplash.</figcaption>
                 </figure>
             </div>
         </div>
@@ -55,7 +55,7 @@
                 <figcaption class="info">I call Cardinals "laser birds"</figcaption>
             </figure>
         </div>
-        <p><a href="https://www.flaticon.com/free-icons/bird" title="bird icons">Bird icons created by Freepik - Flaticon</a></p>
+        <p class="attribution"><a href="https://www.flaticon.com/free-icons/bird" title="bird icons">Bird icons created by Freepik - Flaticon</a></p>
     </div>
         
     <div class="quote-section">
@@ -63,9 +63,13 @@
         <p class="author">- Douglas Adams</p>
     </div>
     <div class="call-section">
-        <h3>Call to action! It's time!</h3>
-        <p>Sign up for our product by clicking that button right over there!</p>
-        <button class="signup call-signup">Sign up</button>
+        <div class="call-to-action">
+            <div>
+                <h3>Interested in more bird facts?</h3>
+                <p>Sign up for our amazing bird newsletter by clicking that button right over there!</p>
+            </div>
+            <button class="signup call-signup">Sign up</button>
+        </div>
     </div>
     <!--Footer-->
     <div class="footer">
